force-app/main/default/objects/sbaa__TrackedValue__c/sbaa__TrackedValue__c.object-meta.xml
<CustomObject>
    <description>Value tracked by Tracked Field.</description>
    <label>Tracked Value</label>
    <nameField>
        <displayFormat>TV-{000000}</displayFormat>
        <label>Tracked Value #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracked Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>