force-app/main/default/objects/sbaa__TrackedValue__c/fields/sbaa__Opportunity__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity associated with the Tracked Value</description>
        <inlineHelpText>Opportunity associated with the Tracked Value</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tracked Values</relationshipLabel>
        <relationshipName>TrackedValues</relationshipName>
        <type>Lookup</type>
    </CustomField>