force-app/main/default/objects/sbaa__TrackedValue__c/fields/sbaa__TrackedField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__TrackedField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tracked Field that generated this Tracked Value</description>
        <inlineHelpText>Tracked Field that generated this Tracked Value</inlineHelpText>
        <label>Tracked Field</label>
        <referenceTo>sbaa__TrackedField__c</referenceTo>
        <relationshipLabel>Tracked Values</relationshipLabel>
        <relationshipName>TrackedValues</relationshipName>
        <type>Lookup</type>
    </CustomField>