force-app/main/default/objects/sbaa__TrackedValue__c/fields/sbaa__ValueNumber__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ValueNumber__c</fullName>
        <description>Stored value if data type is number</description>
        <inlineHelpText>Stored value if data type is number</inlineHelpText>
        <label>Value (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>