force-app/main/default/objects/sbaa__TrackedValue__c/fields/sbaa__ValueText__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ValueText__c</fullName>
        <description>Stored value if data type is text</description>
        <inlineHelpText>Stored value if data type is text</inlineHelpText>
        <label>Value (Text)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>